fix(channeldata): channel input overlapping the channel's content

--- a/src/components/ChannelData/styles.sass
+++ b/src/components/ChannelData/styles.sass
@@ -76,7 +76,7 @@
         border-radius: 4px
 
       &::-webkit-scrollbar-track
-        background: var(--secondary)
+        background: var(--quinary)
 
       &:not(:empty)
         color: var(--white)
